# Genesis

./: .gitattributes  .gitignore  .gitmodules  .polyscope.ini  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  DEPRECATION_SHIMS_README.md  Dockerfile  MANIFEST.in  README.md  README_CN.md  README_FR.md  README_JA.md  README_KR.md  README_TR.md  RELEASE.md  RELEASE_NOTES_WITH_COAUTHORS.md  WEBRTC_STREAMING.md  bench_bp6_instrumented.py  bench_hpatch.py  benchmark_results.csv  decode_base64_image.py  decode_base64_one_liner.py  docker-compose.yml  f  genesis.deps.yaml  nodegraph.usda  pixi.toml  profile_summary_branch_chunk2_0.txt  profile_summary_branch_duck_gjk_0.txt  profile_summary_branch_fix2_0.txt  profile_summary_branch_fix_0.txt  profile_summary_branch_gjk_0.txt  profile_summary_branch_roundrobin_0.txt  profile_summary_branch_warp_0.txt  profile_summary_g1_fall-Newton-None-4096-gpu_0.txt  profile_summary_gjk_1x_0.txt  profile_summary_gjk_2x_0.txt  (+24 more)
.claude/: settings.local.json
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/contributing/: ARCHITECTURE.md  CODING_CONVENTIONS.md  EXAMPLES.md  TESTING.md  USD_PARSER.md
.github/workflows/: Dockerfile  alarm.yml  bottle  ci.yml  examples.yml  format.yml  generate-release-notes.yml  generic-cpu.yml  generic.yml  gpu_on_github.yml  linux-gpu.yml  production.yml  setup_env.sh
Fuzz/: fuzz_target.py
docker/: Dockerfile  Dockerfile.amdgpu  build_luisa.sh  nvidia_layers.json
examples/: ddp_multi_gpu.py  differentiable_push.py  differentiable_rigid_demo_1.py  elastic_dragon.py  fem_hard_and_soft_constraint.py  four_bar_linkage_genesis.py  four_bar_linkage_mujoco.py  hibernation.py  keyboard_teleop.py  pbd_liquid.py  pbd_liquid_on_mac.py  render_async.py  render_on_macos.py  smoke.py  test_simple_reference.py
examples/IPC_Solver/: .polyscope.ini  README.md  genesis_ipc_motion_test.py  ipc_abd_momentum.py  ipc_arm.py  ipc_arm_cloth.py  ipc_arm_cloth_articulation.py  ipc_cloth.py  ipc_cloth_falling.py  ipc_cube.py  ipc_fem_momentum.py  ipc_grasp.py  ipc_grasp_2_cloth_teleop.py  ipc_grasp_smooth.py  ipc_grasp_urdf.py  ipc_momentum.py  ipc_motion.py  ipc_objects_falling.py  ipc_robot_cloth_grasp.py  ipc_robot_cloth_teleop.py  ipc_robot_cloth_telop.py  ipc_robot_grasp_cube.py  ipc_twist_cloth_band.py  ipc_two_cube_joint_debug.py  test_four_cube_chain.py  test_minimal_articulation.py  test_mixed_joints.py  test_prismatic_simple.py  test_three_cube_chain.py  test_two_way_prismatic.py  test_two_way_revolute.py
examples/collision/: contype.py  pyramid.py  tower.py
examples/coupling/: cloth_attached_to_rigid.py  cloth_on_rigid.py  cloth_on_rigid2.py  cut_dragon.py  fem_cube_linked_with_arm.py  flush_cubes.py  grasp_soft_cube.py  rigid_mpm_attachment.py  sand_wheel.py  sph_mpm.py  sph_rigid.py  unit_test_parallel.py  water_wheel.py
examples/diffrigid/: 2_lift_ball.py  ant.py  debug_rot.py  one_step.py  pingpong.py  slide_ball.py
examples/drone/: CHANGES_SUMMARY.md  CODE_CHANGES_DETAILED.md  MPS_ACCELERATION_GUIDE.md  README.md  README_UPDATES.md  fly.py  fly_route.py  fly_traj.pkl  hover_env.py  hover_eval.py  hover_train.py  interactive_drone.py  quadcopter_controller.py
examples/gui/: imgui_joint_control.py
examples/interactive_viewer/: mouse_spring.py
examples/kinematic/: go2_kinematic.py
examples/locomotion/: README_real_robot.md  claude_code_pr_guide.md  g1_env.py  g1_eval.py  g1_eval_mujoco.py  g1_train.py  github_cli_memo.md  go2_backflip.py  go2_env.py  go2_eval.py  go2_real_backflip.py  go2_real_env.py  go2_train.py  requirements_real.txt  test.py
examples/manipulation/: behavior_cloning.py  grasp_env.py  grasp_eval.py  grasp_train.py
examples/rendering/: demo.py  follow_entity.py  moving_camera.py  simple_camera_sensor_example.py  speed_test.py
examples/rigid/: accelerometer_duck.py  (+35 more)
genesis/: __init__.py  _main.py  constants.py  datatypes.py  repr_base.py  styles.py  typing.py  version.py
genesis/ext/fast-simplification/: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.rst  pyproject.toml  requirements_docs.txt  requirements_test.txt  setup.py
genesis/ext/fast-simplification/doc/: Makefile  api.rst  conf.py  index.rst
genesis/ext/fast-simplification/examples/: README.txt  replay.py  simplify.py
genesis/ext/fast-simplification/fast_simplification/: fast_simplification.py  simplify.py
genesis_loco/: clear_mem.py  debug_joint_mapping.py  humanoid_walking_control.py  simple_joint_action_test.py  test_complete_skeleton.py  test_control_skeleton.py  test_gravity_check.py  test_gravity_fall.py  test_joint_ranges.py  test_skeleton.py
genesis_test/: test.py
playground/: 1_hello_urdf.py  2_hello_usd.py  3_import_articulation.py  4_import_g1.py  5_import_g1_rendering.py  6_import_stage.py  7_shelf_g1.py  usd_stage_importer.py
scripts/: README.md  demo_release_notes.py  generate_release_notes.py  test_release_notes.py
src/: aluminium.py  annotate.py  check_particle.py  download_objects.py  grasp_bottle.py  grasp_chip_can.py  grasp_object.py  grasp_soft_cube.py  load_object_data.py  main.py  object_sheet.csv  pet.py  pickup.py  pp.py  rigid_box_with_photos.py  rubber.py  steel.py  test.py  test2.py
tests/: conftest.py  manual_test_examples.py  monitor_test_mem.py  profiling.py  pytest_plugin.py  run_benchmarks.py  test_alarm_workflow.py  test_bvh.py  test_camera.py  test_capsule_analytical_vs_gjk.py  test_collider.py  test_comfree.py  test_coupler.py  test_deformable_parallel.py  test_deformable_physics.py  test_diff_rigid.py  test_drone_substeps.py  test_energy.py  test_entity_naming.py  test_examples.py  test_examples_ci.py  test_fastcache_unified.py  test_fem.py  test_fem_implicit.py  test_grad.py  test_gs_cli.py  test_gstaichi.py  test_hybrid.py  test_imgui_overlay.py  test_imu.py  test_integration.py  test_ipc.py  test_ipc_coupling.py  test_kinematic.py  test_kinematic_contact_probe.py  test_mesh.py  test_misc.py  test_mpm.py  test_pbd.py  test_plane_mass.py  (+28 more)
(+940 files in other folders)
